# empatoes

./: .gitignore  ligas.env  makefile  pyproject.toml
code/: helpers.py  main.py
